K8s/servicw.yaml
apiVersion: v1
kind: Service

metadata:
  name: gaming-service
  namespace: gaming

spec:
  type: ClusterIP

  selector:
    app: gaming-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
